<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.agendapink.agendapink.CadastroContato"
    android:background="@color/light_pink">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/sign_up_image"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:clickable="true"
                android:src="@mipmap/ic_launcher"
                android:onClick="onSignUpImageClick"
                android:layout_margin="16dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_name"
                android:layout_margin="16dp"
                android:layout_toEndOf="@id/sign_up_image"
                android:layout_toRightOf="@id/sign_up_image"
                android:hint="@string/name"
                 />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_toEndOf="@id/sign_up_image"
                android:layout_toRightOf="@id/sign_up_image"
                android:layout_below="@id/sign_up_name"
                android:layout_margin="16dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_telephone"
                android:hint="@string/telephone"
                android:inputType="phone"
                android:layout_below="@id/sign_up_email"
                android:layout_toEndOf="@id/sign_up_image"
                android:layout_toRightOf="@id/sign_up_image"
                android:layout_margin="16dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_address"
                android:hint="@string/adress"
                android:layout_below="@id/sign_up_telephone"
                android:layout_margin="16dp"/>

            <Button
                android:id="@+id/sign_up_map_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mapa"
                android:layout_below="@id/sign_up_address"
                android:layout_alignEnd="@id/sign_up_address"
                android:layout_alignRight="@id/sign_up_address" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
